<resources>
    <string name="onboarding_welcome_text">Рады видеть тебя в трекере заданий Alfredo</string>
    <string name="onboarding_main_text_1">Создавай задачи и выполняй их в срок</string>
    <string name="onboarding_main_text_2">Достигай цели и получай награды</string>
    <string name="signup_text">Создать аккаунт</string>
    <string name="login_text">Войти</string>

    <string name="login_with_qr_code">Отсканировать QR-Code из профиля Родителей.</string>
    <string name="login_forgot_password">Не помнишь пароль? Восстановить доступ.</string>
    <string name="login_title">Войти</string>
    <string name="login_child_subtitle">Введи свой email и Family ID для доступа в аккаунт.</string>

    <string name="login_email_parent">Ваш email</string>
    <string name="login_email_child">Твой email</string>
    <string name="login_password_child">Family ID</string>
    <string name="login_button_continue">Продолжить</string>
    <string name="login_parent_subtitle">Введи свои данные для доступа в аккаунт.</string>
    <string name="login_password_parent">Пароль или Family ID</string>
    <string name="authentication_success">Authentication success</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="email_error">Неверный формат email.</string>
    <string name="password_error">Неверный формат или количество символов.</string>
    <string name="authentication_error">Неверный email или Family ID.</string>

    <string name="title">Войти</string>
    <string name="description">Выбери способ доступа в свой аккаунт.</string>
    <string name="sign_in_with_google">Войти с Google</string>
    <string name="sign_in_with_email">Войти по email</string>
    <string name="create_account">Впервые в Трекере Заданий? <b><a href="">Создать аккаунт.</a></b></string>

    <string name="sign_up_with_email_title">Новый аккаунт</string>
    <string name="sign_up_with_email_subtitle">Внесенный email будет использован для восстановления доступа к твоему аккаунту.</string>
    <string name="sign_up_with_email_terms_and_conditions">Продолжая регистрацию, ты подверждаешь согласие с <b><a href="">Правилами пользования.</a></b></string>

    <string name="sign_up_confirmation_title">Подтверди email</string>
    <string name="sign_up_confirmation_subtitle">Мы отправили ссылку на твой email. Пройди по ссылке, чтобы завершить регистрацию.</string>
    <string name="sign_up_confirmation_support">Не видишь наше сообщение? Проверь папку спам.<b><a href=""> Поддержка здесь.</a></b></string>

    <string name="create_account_subtitle">Заполни данные для своего аккаунта. Аккаунту автоматически присвоена роль родителя.</string>
    <string name="create_account_button_finish_registration">Завершить регистрацию</string>
    <string name="create_account_name">Твое имя</string>
    <string name="create_account_password">Придумай пароль</string>
    <string name="create_account_password_confirm">Подтверди пароль</string>

    <string name="create_account_notifications_title">Оставайся в курсе</string>
    <string name="create_account_notifications_subtitle">Позволь держать тебя в курсе главных обновлений твоей семьи. </string>
    <string name="create_account_notifications_skip">Не уверен нужны ли уведомления?<b><a href="">Пропустить настройку.</a></b></string>
    <string name="create_account_notifications_button_permit">Разрешить уведомления</string>

    <string name="dialog_notification_permission_title">“Alfredo” просит разрешить отправку уведомлений.</string>
    <string name="dialog_notification_permission_subtitle">Изменить настройки уведомлений возможно в Настройках.</string>
    <string name="dialog_notification_button_permit">РАЗРЕШИТЬ</string>
    <string name="dialog_notification_button_cancel">ОТМЕНА</string>

    <string name="create_account_finish_title">Почти готово</string>
    <string name="create_account_finish_subtitle">Твой аккаунт создан. Дай нам еще пару секунд.</string>
</resources>