<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar_sign_up"
        layout="@layout/partial_appbar_sign_up" />

    <TextView
        android:id="@+id/textview_create_account_notifications_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:fontFamily="@font/nexa_demo_bold"
        android:text="@string/sign_up_with_email_title"
        android:textAppearance="@style/TextAppearanceLoginTitleStyle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_create_account_notifications_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.small"
        android:gravity="center_vertical"
        android:text="@string/sign_up_with_email_subtitle"
        android:textAppearance="@style/description" />

    <com.projectx.common.presentation.support.CustomTextInputLayout
        android:id="@+id/email_sign_up_layout"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.large"
        android:gravity="bottom"
        android:hint="@string/login_email_parent"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.projectx.common.presentation.support.CustomTextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit_email"
        style="@style/ButtonLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:text="@string/login_button_continue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_sign_up_with_email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing.normal"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/sign_up_with_email_terms_and_conditions"
        android:textColor="@color/primary_midnight"
        android:textColorLink="@color/primary_juicy_grape"
        android:textStyle="bold" />

</LinearLayout>
