<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar_create_account"
        layout="@layout/partial_appbar_create_account" />

    <TextView
        android:id="@+id/textview_create_account_notifications_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:fontFamily="@font/nexa_demo_bold"
        android:text="@string/sign_up_with_email_title"
        android:textAppearance="@style/TextAppearanceLoginTitleStyle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_create_account_notifications_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.small"
        android:gravity="center_vertical"
        android:text="@string/create_account_subtitle"
        android:textAppearance="@style/description" />

    <com.projectx.common.presentation.support.CustomTextInputLayout
        android:id="@+id/new_account_name"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.large"
        android:gravity="bottom"
        android:hint="@string/create_account_name"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.projectx.common.presentation.support.CustomTextInputLayout>

    <com.projectx.common.presentation.support.CustomTextInputLayout
        android:id="@+id/new_account_password"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.large"
        android:gravity="bottom"
        android:hint="@string/create_account_password"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.projectx.common.presentation.support.CustomTextInputLayout>

    <com.projectx.common.presentation.support.CustomTextInputLayout
        android:id="@+id/new_account_password_confirm"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="@dimen/spacing.large"
        android:gravity="bottom"
        android:hint="@string/create_account_password_confirm"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.projectx.common.presentation.support.CustomTextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_finish_registration"
        style="@style/ButtonLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:text="@string/create_account_button_finish_registration" />

</LinearLayout>