<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar_create_account_notifications"
        layout="@layout/partial_appbar_create_account_notifications" />

    <TextView
        android:id="@+id/textview_create_account_notifications_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_demo_bold"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:text="@string/create_account_notifications_title"
        android:textAppearance="@style/TextAppearanceLoginTitleStyle"
        app:layout_constraintTop_toBottomOf="@+id/appbar_create_account_notifications" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_create_account_notifications_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/spacing.normal"
        android:paddingRight="@dimen/spacing.normal"
        android:text="@string/create_account_notifications_subtitle"
        android:textAppearance="@style/description"
        app:layout_constraintTop_toBottomOf="@+id/textview_create_account_notifications_title" />

    <ImageView
        android:id="@+id/imageView_alarm_clock"
        android:layout_width="232dp"
        android:layout_height="249dp"
        android:src="@drawable/alarm_clock"
        app:layout_constraintBottom_toTopOf="@+id/button_permit_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_create_account_notifications_subtitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_permit_notifications"
        style="@style/ButtonLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginBottom="@dimen/spacing.large"
        android:padding="0dp"
        android:text="@string/create_account_notifications_button_permit"
        app:layout_constraintBottom_toTopOf="@+id/textview_create_account_notification_skip_message"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_create_account_notification_skip_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing.normal"
        android:layout_marginBottom="@dimen/spacing.large"
        android:gravity="center"
        android:text="@string/create_account_notifications_skip"
        android:textColor="@color/primary_midnight"
        android:textColorLink="@color/primary_juicy_grape"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
