<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <include
                android:id="@+id/appbar_login"
                layout="@layout/partial_appbar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing.normal"
                android:fontFamily="@font/nexa_demo_bold"
                android:text="@string/login_title"
                android:textAppearance="@style/TextAppearanceLoginTitleStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appbar_login" />

            <TextView
                android:id="@+id/textview_login_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing.normal"
                android:layout_marginTop="@dimen/spacing.small"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/login_parent_subtitle"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size.small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_login_title" />

            <com.projectx.common.presentation.support.CustomTextInputLayout
                android:id="@+id/email_login"
                style="@style/TextInputEditTextLoginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing.normal"
                android:layout_marginTop="@dimen/spacing.large"
                android:gravity="bottom"
                android:hint="@string/login_email_parent"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/family_id_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_login_subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/CustomTextInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom" />
            </com.projectx.common.presentation.support.CustomTextInputLayout>

            <com.projectx.common.presentation.support.CustomTextInputLayout
                android:id="@+id/family_id_login"
                style="@style/TextInputEditTextLoginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing.normal"
                android:layout_marginTop="@dimen/spacing.small"
                android:hint="@string/login_password_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/CustomTextInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:inputType="textPassword" />
            </com.projectx.common.presentation.support.CustomTextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login_submit"
                style="@style/ButtonLoginStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/spacing.normal"
                android:layout_marginTop="40dp"
                android:padding="12dp"
                android:text="@string/login_button_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/family_id_login" />

            <TextView
                android:id="@+id/textview_login_restore_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing.double"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@string/font_family_normal"
                android:gravity="center"
                android:text="@string/login_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/login_text_view_help_color"
                android:textColorLink="@color/primary_color"
                android:textSize="@dimen/text_size.small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
